...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <rect key="contentStretch" x="0.10000000000000001" y="0.10000000000000001" width="1" height="1"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="..." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RsR-c6-pcO">
                                            <rect key="frame" x="346" y="6" width="14" height="20.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                    <navigationItem key="navigationItem" id="bAv-7t-Qzp">
                        <barButtonItem key="leftBarButtonItem" title="Home" id="pi6-qc-Xt4">
                            <connections>
                                <segue destination="LpU-8l-9Ys" kind="show" identifier="home" id="xU9-mA-OlS"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="All Food Items" id="4KQ-GJ-ghY">
                            <connections>
                                <segue destination="zt8-BK-DSK" kind="show" identifier="totalItems" id="t8h-Vn-FDI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIl-O0-zUC">
                                                    <rect key="frame" x="240" y="9" width="110" height="36"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Nutritional Info"/>
                                                    <connections>
                                                        <action selector="buttonTap:" destination="CKD-t8-Ova" eventType="touchUpInside" id="exT-f5-ymE"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                        </tableViewCellContentView>
...
                                <color key="textColor" red="0.3057965614" green="0.77568717279999999" blue="0.016848361280000002" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R54-1q-9OY">
                                <rect key="frame" x="27" y="306" width="82" height="28"/>
                                <fontDescription key="fontDescription" name="DIN-BlackAlternate" family="DIN" pointSize="22"/>
                                <state key="normal" title="Eat out">
                                    <color key="titleColor" red="0.6588235294" green="0.6588235294" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="b5x-za-MAs" kind="show" id="RFN-Eh-oEY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3M-Pq-M1x">
                                <rect key="frame" x="27" y="401" width="136" height="35"/>
                                <fontDescription key="fontDescription" name="DIN-BlackAlternate" family="DIN" pointSize="22"/>
                                <state key="normal" title="Eat at home">
                                    <color key="titleColor" red="0.6588235294" green="0.6588235294" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <segue destination="ljq-Hl-J0Z" kind="show" id="oA1-pT-Qwc"/>
                                </connections>
                            </button>
...
                                    <outlet property="delegate" destination="ljq-Hl-J0Z" id="pSB-Dj-sqE"/>
                                </connections>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDY-Or-BEc">
                                <rect key="frame" x="217" y="619" width="158" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="RecipeSearch:" destination="ljq-Hl-J0Z" eventType="touchUpInside" id="NTd-qj-Dqm"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <navigationItem key="navigationItem" id="eeO-c7-QRe">
                        <barButtonItem key="leftBarButtonItem" title="Back" id="tda-kE-BYD">
                            <connections>
                                <segue destination="KhB-8F-wqv" kind="show" id="VKY-fT-yGr"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Home" id="Pav-1f-coA">
                            <connections>
...
