...
    
    var parentViewController : ViewController? //establish viewcontroller variable
    
    //create textfield for user input
    let IngredientField : UITextField = {
        let field = UITextField()
        field.placeholder = "Ingredient"
        field.borderStyle = .roundedRect
        field.translatesAutoresizingMaskIntoConstraints = false
        return field
    }()
    //create button to add ingredient to array
    let addIngredient : UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Add", for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    //set up subviews to present textfield and button
    override func setupViews() {
...
