...
    //initialize all restaurants
    var Restaurant1 = RestaurantClass(name:"Starbucks", items: [],distance:10, long: -122.912288, lat: 49.278124)
    var Restaurant2 = RestaurantClass(name:"Pizza Hut", items: [] ,distance: 5, long: -122.911990, lat: 49.277840)
    var Restaurant3 = RestaurantClass(name:"Triple O's", items: [],distance: 8, long:-122.917134 , lat: 49.279274)
    var Restaurant4 = RestaurantClass(name: "Donair Town", items: [], distance: 7, long: -122.911918, lat:49.277824)
    var Restaurant5 = RestaurantClass(name: "Natures Garden", items: [], distance: 7, long: -122.911474, lat: 49.278010)
    var Restaurant6 = RestaurantClass(name: "Poke Bar", items: [], distance: 7, long: -122.911852, lat:49.277800)
    var Restaurant7 = RestaurantClass(name: "Big Smoke Burgers", items: [], distance: 7, long: -122.912363, lat:49.277860)
    var Restaurant8 = RestaurantClass(name: "Bamboo Garden", items: [], distance: 7, long: -122.912079, lat:49.277837)
    var Restaurant9 = RestaurantClass(name: "Club Ilia", items: [], distance: 7, long: -122.912339, lat:49.277984)
    var Restaurant10 = RestaurantClass(name: "Bubble World", items: [], distance: 7, long: -122.919092, lat: 49.278656)
    var Restaurant11 = RestaurantClass(name: "Gawon Korean", items: [], distance: 7, long: -122.918849, lat: 49.278578)
    var Restaurant12 = RestaurantClass(name: "Guadalupe Handmade Burritos", items: [], distance: 7, long: -122.918729, lat:49.278599)
    var Restaurant13 = RestaurantClass(name: "Higher Grounds Coffee Shop", items: [], distance: 7, long: -122.918657, lat:49.278884)
...
